// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Card basic stateful example with custom expand icon 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "margin": 20,
        "width": "520px",
      }
    }
  >
    <div
      className="iot--card iot--card--wrapper"
      data-testid="Card"
      id="facilitycard-basic"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      role="presentation"
      style={
        Object {
          "--card-default-height": "304px",
        }
      }
      tabIndex={0}
    >
      <div
        className="iot--card--header"
        data-testid="Card-header"
      >
        <span
          className="iot--card--title"
          data-testid="Card-title"
          title="Card title"
        >
          <div
            className="iot--card--title--text"
          >
            Card title
          </div>
        </span>
        <div
          className="iot--card--toolbar"
          data-testid="Card-toolbar"
        >
          <div
            className="iot--card--toolbar-date-range-wrapper"
          >
            <div
              className="iot--card--toolbar-timerange-label"
              id="timeRange"
            >
              Default
            </div>
            <button
              aria-expanded={false}
              aria-haspopup={true}
              aria-label="open and close list of options"
              className="iot--card--toolbar-date-range-action bx--overflow-menu bx--overflow-menu--lg"
              data-testid="Card-toolbar-range-picker"
              onClick={[Function]}
              onClose={[Function]}
              onKeyDown={[Function]}
              open={false}
              title="Select time range"
              type="button"
            >
              <svg
                aria-label="Select time range"
                className="bx--overflow-menu__icon"
                fill="currentColor"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 32 32"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M21,30a8,8,0,1,1,8-8A8,8,0,0,1,21,30Zm0-14a6,6,0,1,0,6,6A6,6,0,0,0,21,16Z"
                />
                <path
                  d="M22.59 25L20 22.41 20 18 22 18 22 21.59 24 23.59 22.59 25z"
                />
                <path
                  d="M28,6a2,2,0,0,0-2-2H22V2H20V4H12V2H10V4H6A2,2,0,0,0,4,6V26a2,2,0,0,0,2,2h4V26H6V6h4V8h2V6h8V8h2V6h4v6h2Z"
                />
                <title>
                  Select time range
                </title>
              </svg>
            </button>
          </div>
          <button
            aria-describedby={null}
            aria-pressed={null}
            className="iot--card--toolbar-action iot--card--toolbar-svg-wrapper bx--btn--icon-only iot--btn bx--btn bx--btn--sm bx--btn--ghost"
            data-testid="Card-toolbar-expand-button"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            tabIndex={0}
            title="Expand to fullscreen"
            type="button"
          >
            <svg
              aria-hidden="true"
              aria-label="Expand to fullscreen"
              className="bx--btn__icon"
              fill="currentColor"
              focusable="false"
              height={16}
              preserveAspectRatio="xMidYMid meet"
              role="img"
              viewBox="0 0 32 32"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12,30H9V28h3V15.5664L8.4854,13.4575l1.0292-1.7148,3.5147,2.1084A2.0115,2.0115,0,0,1,14,15.5664V28A2.0023,2.0023,0,0,1,12,30Z"
              />
              <path
                d="M22,30H19a2.0024,2.0024,0,0,1-2-2V17h6a4.0008,4.0008,0,0,0,3.981-4.396A4.1489,4.1489,0,0,0,22.7853,9H21.2016L21.025,8.221C20.452,5.6961,18.0308,4,15,4A6.02,6.02,0,0,0,9.5585,7.4859L9.25,8.1531l-.863-.1143A2.771,2.771,0,0,0,8,8a4,4,0,1,0,0,8v2A6,6,0,1,1,8,6c.0264,0,.0525,0,.0786.001A8.0271,8.0271,0,0,1,15,2c3.6788,0,6.6923,1.9776,7.7516,5h.0337a6.1641,6.1641,0,0,1,6.1872,5.4141A6.0011,6.0011,0,0,1,23,19l-4,0v9h3Z"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        className="iot--card--content"
        data-testid="Card-content"
        style={
          Object {
            "--card-content-height": "256px",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Card implementing a custom card 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "margin": 20,
        "width": "520px",
      }
    }
  >
    <div
      className="iot--card iot--card--wrapper"
      data-testid="Card"
      id="mycard"
      role="presentation"
      style={
        Object {
          "--card-default-height": "304px",
        }
      }
    >
      <div
        className="iot--card--content"
        data-testid="Card-content"
        style={
          Object {
            "--card-content-height": "256px",
          }
        }
      >
        <div
          className="iot--table-container bx--data-table-container"
          data-testid="my table-table-container"
          style={
            Object {
              "transform": "translateX(-1rem)",
              "width": "calc(100% + 2rem)",
            }
          }
        >
          <section
            aria-label="data table toolbar"
            className="bx--table-toolbar"
            data-testid="my table-table-toolbar"
          >
            <div
              aria-hidden={true}
              className="bx--batch-actions iot--table-batch-actions"
              data-testid="my table-table-toolbar-batch-actions"
              onScroll={[Function]}
            >
              <div
                className="bx--batch-summary"
              >
                <p
                  className="bx--batch-summary__para"
                >
                  <span>
                    0 items selected
                  </span>
                </p>
              </div>
              <div
                className="bx--action-list"
              >
                <button
                  aria-describedby={null}
                  aria-pressed={null}
                  className="bx--batch-summary__cancel bx--btn bx--btn--primary"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  tabIndex={-1}
                  type="button"
                >
                  Cancel
                </button>
              </div>
            </div>
            <label
              className="iot--table-toolbar-secondary-title"
            >
              Custom Card Title
            </label>
            <div
              className="bx--toolbar-content iot--table-toolbar-content"
              data-testid="my table-table-toolbar-content"
            >
              <div
                className="iot--card--toolbar"
                data-testid="Card-toolbar"
              >
                <div
                  className="iot--card--toolbar-date-range-wrapper"
                >
                  <div
                    className="iot--card--toolbar-timerange-label"
                    id="timeRange"
                  >
                    Default
                  </div>
                  <button
                    aria-expanded={false}
                    aria-haspopup={true}
                    aria-label="open and close list of options"
                    className="iot--card--toolbar-date-range-action bx--overflow-menu bx--overflow-menu--lg"
                    data-testid="Card-toolbar-range-picker"
                    onClick={[Function]}
                    onClose={[Function]}
                    onKeyDown={[Function]}
                    open={false}
                    title="Select time range"
                    type="button"
                  >
                    <svg
                      aria-label="Select time range"
                      className="bx--overflow-menu__icon"
                      fill="currentColor"
                      focusable="false"
                      height={16}
                      preserveAspectRatio="xMidYMid meet"
                      role="img"
                      viewBox="0 0 32 32"
                      width={16}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M21,30a8,8,0,1,1,8-8A8,8,0,0,1,21,30Zm0-14a6,6,0,1,0,6,6A6,6,0,0,0,21,16Z"
                      />
                      <path
                        d="M22.59 25L20 22.41 20 18 22 18 22 21.59 24 23.59 22.59 25z"
                      />
                      <path
                        d="M28,6a2,2,0,0,0-2-2H22V2H20V4H12V2H10V4H6A2,2,0,0,0,4,6V26a2,2,0,0,0,2,2h4V26H6V6h4V8h2V6h8V8h2V6h4v6h2Z"
                      />
                      <title>
                        Select time range
                      </title>
                    </svg>
                  </button>
                </div>
                <button
                  aria-describedby={null}
                  aria-pressed={null}
                  className="iot--card--toolbar-action iot--card--toolbar-svg-wrapper bx--btn--icon-only iot--btn bx--btn bx--btn--sm bx--btn--ghost"
                  data-testid="Card-toolbar-expand-button"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  tabIndex={0}
                  title="Expand to fullscreen"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    aria-label="Expand to fullscreen"
                    className="bx--btn__icon"
                    fill="currentColor"
                    focusable="false"
                    height={16}
                    preserveAspectRatio="xMidYMid meet"
                    role="img"
                    viewBox="0 0 32 32"
                    width={16}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M28,4H10A2.0059,2.0059,0,0,0,8,6V20a2.0059,2.0059,0,0,0,2,2H28a2.0059,2.0059,0,0,0,2-2V6A2.0059,2.0059,0,0,0,28,4Zm0,16H10V6H28Z"
                    />
                    <path
                      d="M18,26H4V16H6V14H4a2.0059,2.0059,0,0,0-2,2V26a2.0059,2.0059,0,0,0,2,2H18a2.0059,2.0059,0,0,0,2-2V24H18Z"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </section>
          <div
            className="addons-iot-table-container"
          >
            <div
              className="bx--data-table-content"
            >
              <table
                className="bx--data-table bx--data-table--no-border"
                data-testid="my table"
                id="my table"
                title={null}
              >
                <thead
                  data-testid="my table-table-head"
                  onMouseMove={null}
                  onMouseUp={null}
                >
                  <tr>
                    <th
                      align="start"
                      className="table-header-label-start iot--table-head--table-header"
                      data-column="value1"
                      data-floating-menu-container={true}
                      data-testid="my table-table-head-column-value1"
                      id="column-value1"
                      scope="col"
                      style={
                        Object {
                          "width": undefined,
                        }
                      }
                    >
                      <span
                        className="bx--table-header-label"
                      >
                        <span
                          className=""
                          title="String"
                        >
                          String
                        </span>
                      </span>
                    </th>
                    <th
                      align="start"
                      className="table-header-label-start iot--table-head--table-header"
                      data-column="timestamp"
                      data-floating-menu-container={true}
                      data-testid="my table-table-head-column-timestamp"
                      id="column-timestamp"
                      scope="col"
                      style={
                        Object {
                          "width": undefined,
                        }
                      }
                    >
                      <span
                        className="bx--table-header-label"
                      >
                        <span
                          className=""
                          title="Date"
                        >
                          Date
                        </span>
                      </span>
                    </th>
                  </tr>
                </thead>
                <tbody
                  aria-live="polite"
                  data-testid="my table-table-body"
                >
                  <tr
                    className="TableBodyRow__StyledTableRow-sc-103itxu-0 fNIOnc"
                    onClick={[Function]}
                  >
                    <td
                      align="start"
                      className="data-table-start"
                      data-column="value1"
                      data-offset={0}
                      id="cell-my table-rowid-0-value1"
                      offset={0}
                    >
                      <span
                        className="TableBodyRow__StyledNestedSpan-sc-103itxu-5 ieOGhB"
                      >
                        <span
                          className=""
                          title="my value"
                        >
                          my value
                        </span>
                      </span>
                    </td>
                    <td
                      align="start"
                      className="data-table-start"
                      data-column="timestamp"
                      data-offset={0}
                      id="cell-my table-rowid-0-timestamp"
                      offset={0}
                    >
                      <span
                        className="TableBodyRow__StyledNestedSpan-sc-103itxu-5 ieOGhB"
                      >
                        <span
                          className=""
                          title={12341231231}
                        >
                          12341231231
                        </span>
                      </span>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Card size gallery 1`] = `
<div
  className="storybook-container"
>
  <h3>
    SMALL
  </h3>
  <div
    style={
      Object {
        "margin": 20,
        "width": "252px",
      }
    }
  >
    <div
      className="iot--card iot--card--wrapper"
      data-testid="Card"
      id="facilitycard-size-gallery-SMALL"
      role="presentation"
      style={
        Object {
          "--card-default-height": "144px",
        }
      }
    >
      <div
        className="iot--card--header"
        data-testid="Card-header"
      >
        <span
          className="iot--card--title"
          data-testid="Card-title"
          title="Card Title"
        >
          <div
            className="iot--card--title--text"
          >
            Card Title
          </div>
        </span>
      </div>
      <div
        className="iot--card--content"
        data-testid="Card-content"
        style={
          Object {
            "--card-content-height": "96px",
          }
        }
      >
        <div
          className="iot--card--empty-message-wrapper"
          style={
            Object {
              "--card-content-padding": "16px",
            }
          }
        >
          No data
        </div>
      </div>
    </div>
  </div>
  <h3>
    SMALLWIDE
  </h3>
  <div
    style={
      Object {
        "margin": 20,
        "width": "520px",
      }
    }
  >
    <div
      className="iot--card iot--card--wrapper"
      data-testid="Card"
      id="facilitycard-size-gallery-SMALLWIDE"
      role="presentation"
      style={
        Object {
          "--card-default-height": "144px",
        }
      }
    >
      <div
        className="iot--card--header"
        data-testid="Card-header"
      >
        <span
          className="iot--card--title"
          data-testid="Card-title"
          title="Card Title"
        >
          <div
            className="iot--card--title--text"
          >
            Card Title
          </div>
        </span>
        <div
          className="iot--card--toolbar"
          data-testid="Card-toolbar"
        >
          <div
            className="iot--card--toolbar-date-range-wrapper"
          >
            <div
              className="iot--card--toolbar-timerange-label"
              id="timeRange"
            >
              Default
            </div>
            <button
              aria-expanded={false}
              aria-haspopup={true}
              aria-label="open and close list of options"
              className="iot--card--toolbar-date-range-action bx--overflow-menu bx--overflow-menu--lg"
              data-testid="Card-toolbar-range-picker"
              onClick={[Function]}
              onClose={[Function]}
              onKeyDown={[Function]}
              open={false}
              title="Select time range"
              type="button"
            >
              <svg
                aria-label="Select time range"
                className="bx--overflow-menu__icon"
                fill="currentColor"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 32 32"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M21,30a8,8,0,1,1,8-8A8,8,0,0,1,21,30Zm0-14a6,6,0,1,0,6,6A6,6,0,0,0,21,16Z"
                />
                <path
                  d="M22.59 25L20 22.41 20 18 22 18 22 21.59 24 23.59 22.59 25z"
                />
                <path
                  d="M28,6a2,2,0,0,0-2-2H22V2H20V4H12V2H10V4H6A2,2,0,0,0,4,6V26a2,2,0,0,0,2,2h4V26H6V6h4V8h2V6h8V8h2V6h4v6h2Z"
                />
                <title>
                  Select time range
                </title>
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div
        className="iot--card--content"
        data-testid="Card-content"
        style={
          Object {
            "--card-content-height": "96px",
          }
        }
      >
        <div
          className="iot--card--empty-message-wrapper"
          style={
            Object {
              "--card-content-padding": "16px",
            }
          }
        >
          No data is available for this time range.
        </div>
      </div>
    </div>
  </div>
  <h3>
    SMALLFULL
  </h3>
  <div
    style={
      Object {
        "margin": 20,
        "width": "1056px",
      }
    }
  >
    <div
      className="iot--card iot--card--wrapper"
      data-testid="Card"
      id="facilitycard-size-gallery-SMALLFULL"
      role="presentation"
      style={
        Object {
          "--card-default-height": "144px",
        }
      }
    >
      <div
        className="iot--card--header"
        data-testid="Card-header"
      >
        <span
          className="iot--card--title"
          data-testid="Card-title"
          title="Card Title"
        >
          <div
            className="iot--card--title--text"
          >
            Card Title
          </div>
        </span>
        <div
          className="iot--card--toolbar"
          data-testid="Card-toolbar"
        >
          <div
            className="iot--card--toolbar-date-range-wrapper"
          >
            <div
              className="iot--card--toolbar-timerange-label"
              id="timeRange"
            >
              Default
            </div>
            <button
              aria-expanded={false}
              aria-haspopup={true}
              aria-label="open and close list of options"
              className="iot--card--toolbar-date-range-action bx--overflow-menu bx--overflow-menu--lg"
              data-testid="Card-toolbar-range-picker"
              onClick={[Function]}
              onClose={[Function]}
              onKeyDown={[Function]}
              open={false}
              title="Select time range"
              type="button"
            >
              <svg
                aria-label="Select time range"
                className="bx--overflow-menu__icon"
                fill="currentColor"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 32 32"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M21,30a8,8,0,1,1,8-8A8,8,0,0,1,21,30Zm0-14a6,6,0,1,0,6,6A6,6,0,0,0,21,16Z"
                />
                <path
                  d="M22.59 25L20 22.41 20 18 22 18 22 21.59 24 23.59 22.59 25z"
                />
                <path
                  d="M28,6a2,2,0,0,0-2-2H22V2H20V4H12V2H10V4H6A2,2,0,0,0,4,6V26a2,2,0,0,0,2,2h4V26H6V6h4V8h2V6h8V8h2V6h4v6h2Z"
                />
                <title>
                  Select time range
                </title>
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div
        className="iot--card--content"
        data-testid="Card-content"
        style={
          Object {
            "--card-content-height": "96px",
          }
        }
      >
        <div
          className="iot--card--empty-message-wrapper"
          style={
            Object {
              "--card-content-padding": "16px",
            }
          }
        >
          No data is available for this time range.
        </div>
      </div>
    </div>
  </div>
  <h3>
    MEDIUMTHIN
  </h3>
  <div
    style={
      Object {
        "margin": 20,
        "width": "252px",
      }
    }
  >
    <div
      className="iot--card iot--card--wrapper"
      data-testid="Card"
      id="facilitycard-size-gallery-MEDIUMTHIN"
      role="presentation"
      style={
        Object {
          "--card-default-height": "304px",
        }
      }
    >
      <div
        className="iot--card--header"
        data-testid="Card-header"
      >
        <span
          className="iot--card--title"
          data-testid="Card-title"
          title="Card Title"
        >
          <div
            className="iot--card--title--text"
          >
            Card Title
          </div>
        </span>
        <div
          className="iot--card--toolbar"
          data-testid="Card-toolbar"
        >
          <div
            className="iot--card--toolbar-date-range-wrapper"
          >
            <div
              className="iot--card--toolbar-timerange-label"
              id="timeRange"
            >
              Default
            </div>
            <button
              aria-expanded={false}
              aria-haspopup={true}
              aria-label="open and close list of options"
              className="iot--card--toolbar-date-range-action bx--overflow-menu bx--overflow-menu--lg"
              data-testid="Card-toolbar-range-picker"
              onClick={[Function]}
              onClose={[Function]}
              onKeyDown={[Function]}
              open={false}
              title="Select time range"
              type="button"
            >
              <svg
                aria-label="Select time range"
                className="bx--overflow-menu__icon"
                fill="currentColor"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 32 32"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M21,30a8,8,0,1,1,8-8A8,8,0,0,1,21,30Zm0-14a6,6,0,1,0,6,6A6,6,0,0,0,21,16Z"
                />
                <path
                  d="M22.59 25L20 22.41 20 18 22 18 22 21.59 24 23.59 22.59 25z"
                />
                <path
                  d="M28,6a2,2,0,0,0-2-2H22V2H20V4H12V2H10V4H6A2,2,0,0,0,4,6V26a2,2,0,0,0,2,2h4V26H6V6h4V8h2V6h8V8h2V6h4v6h2Z"
                />
                <title>
                  Select time range
                </title>
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div
        className="iot--card--content"
        data-testid="Card-content"
        style={
          Object {
            "--card-content-height": "256px",
          }
        }
      >
        <div
          className="iot--card--empty-message-wrapper"
          style={
            Object {
              "--card-content-padding": "16px",
            }
          }
        >
          No data is available for this time range.
        </div>
      </div>
    </div>
  </div>
  <h3>
    MEDIUM
  </h3>
  <div
    style={
      Object {
        "margin": 20,
        "width": "520px",
      }
    }
  >
    <div
      className="iot--card iot--card--wrapper"
      data-testid="Card"
      id="facilitycard-size-gallery-MEDIUM"
      role="presentation"
      style={
        Object {
          "--card-default-height": "304px",
        }
      }
    >
      <div
        className="iot--card--header"
        data-testid="Card-header"
      >
        <span
          className="iot--card--title"
          data-testid="Card-title"
          title="Card Title"
        >
          <div
            className="iot--card--title--text"
          >
            Card Title
          </div>
        </span>
        <div
          className="iot--card--toolbar"
          data-testid="Card-toolbar"
        >
          <div
            className="iot--card--toolbar-date-range-wrapper"
          >
            <div
              className="iot--card--toolbar-timerange-label"
              id="timeRange"
            >
              Default
            </div>
            <button
              aria-expanded={false}
              aria-haspopup={true}
              aria-label="open and close list of options"
              className="iot--card--toolbar-date-range-action bx--overflow-menu bx--overflow-menu--lg"
              data-testid="Card-toolbar-range-picker"
              onClick={[Function]}
              onClose={[Function]}
              onKeyDown={[Function]}
              open={false}
              title="Select time range"
              type="button"
            >
              <svg
                aria-label="Select time range"
                className="bx--overflow-menu__icon"
                fill="currentColor"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 32 32"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M21,30a8,8,0,1,1,8-8A8,8,0,0,1,21,30Zm0-14a6,6,0,1,0,6,6A6,6,0,0,0,21,16Z"
                />
                <path
                  d="M22.59 25L20 22.41 20 18 22 18 22 21.59 24 23.59 22.59 25z"
                />
                <path
                  d="M28,6a2,2,0,0,0-2-2H22V2H20V4H12V2H10V4H6A2,2,0,0,0,4,6V26a2,2,0,0,0,2,2h4V26H6V6h4V8h2V6h8V8h2V6h4v6h2Z"
                />
                <title>
                  Select time range
                </title>
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div
        className="iot--card--content"
        data-testid="Card-content"
        style={
          Object {
            "--card-content-height": "256px",
          }
        }
      >
        <div
          className="iot--card--empty-message-wrapper"
          style={
            Object {
              "--card-content-padding": "16px",
            }
          }
        >
          No data is available for this time range.
        </div>
      </div>
    </div>
  </div>
  <h3>
    MEDIUMWIDE
  </h3>
  <div
    style={
      Object {
        "margin": 20,
        "width": "1056px",
      }
    }
  >
    <div
      className="iot--card iot--card--wrapper"
      data-testid="Card"
      id="facilitycard-size-gallery-MEDIUMWIDE"
      role="presentation"
      style={
        Object {
          "--card-default-height": "304px",
        }
      }
    >
      <div
        className="iot--card--header"
        data-testid="Card-header"
      >
        <span
          className="iot--card--title"
          data-testid="Card-title"
          title="Card Title"
        >
          <div
            className="iot--card--title--text"
          >
            Card Title
          </div>
        </span>
        <div
          className="iot--card--toolbar"
          data-testid="Card-toolbar"
        >
          <div
            className="iot--card--toolbar-date-range-wrapper"
          >
            <div
              className="iot--card--toolbar-timerange-label"
              id="timeRange"
            >
              Default
            </div>
            <button
              aria-expanded={false}
              aria-haspopup={true}
              aria-label="open and close list of options"
              className="iot--card--toolbar-date-range-action bx--overflow-menu bx--overflow-menu--lg"
              data-testid="Card-toolbar-range-picker"
              onClick={[Function]}
              onClose={[Function]}
              onKeyDown={[Function]}
              open={false}
              title="Select time range"
              type="button"
            >
              <svg
                aria-label="Select time range"
                className="bx--overflow-menu__icon"
                fill="currentColor"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 32 32"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M21,30a8,8,0,1,1,8-8A8,8,0,0,1,21,30Zm0-14a6,6,0,1,0,6,6A6,6,0,0,0,21,16Z"
                />
                <path
                  d="M22.59 25L20 22.41 20 18 22 18 22 21.59 24 23.59 22.59 25z"
                />
                <path
                  d="M28,6a2,2,0,0,0-2-2H22V2H20V4H12V2H10V4H6A2,2,0,0,0,4,6V26a2,2,0,0,0,2,2h4V26H6V6h4V8h2V6h8V8h2V6h4v6h2Z"
                />
                <title>
                  Select time range
                </title>
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div
        className="iot--card--content"
        data-testid="Card-content"
        style={
          Object {
            "--card-content-height": "256px",
          }
        }
      >
        <div
          className="iot--card--empty-message-wrapper"
          style={
            Object {
              "--card-content-padding": "16px",
            }
          }
        >
          No data is available for this time range.
        </div>
      </div>
    </div>
  </div>
  <h3>
    LARGETHIN
  </h3>
  <div
    style={
      Object {
        "margin": 20,
        "width": "252px",
      }
    }
  >
    <div
      className="iot--card iot--card--wrapper"
      data-testid="Card"
      id="facilitycard-size-gallery-LARGETHIN"
      role="presentation"
      style={
        Object {
          "--card-default-height": "624px",
        }
      }
    >
      <div
        className="iot--card--header"
        data-testid="Card-header"
      >
        <span
          className="iot--card--title"
          data-testid="Card-title"
          title="Card Title"
        >
          <div
            className="iot--card--title--text"
          >
            Card Title
          </div>
        </span>
        <div
          className="iot--card--toolbar"
          data-testid="Card-toolbar"
        >
          <div
            className="iot--card--toolbar-date-range-wrapper"
          >
            <div
              className="iot--card--toolbar-timerange-label"
              id="timeRange"
            >
              Default
            </div>
            <button
              aria-expanded={false}
              aria-haspopup={true}
              aria-label="open and close list of options"
              className="iot--card--toolbar-date-range-action bx--overflow-menu bx--overflow-menu--lg"
              data-testid="Card-toolbar-range-picker"
              onClick={[Function]}
              onClose={[Function]}
              onKeyDown={[Function]}
              open={false}
              title="Select time range"
              type="button"
            >
              <svg
                aria-label="Select time range"
                className="bx--overflow-menu__icon"
                fill="currentColor"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 32 32"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M21,30a8,8,0,1,1,8-8A8,8,0,0,1,21,30Zm0-14a6,6,0,1,0,6,6A6,6,0,0,0,21,16Z"
                />
                <path
                  d="M22.59 25L20 22.41 20 18 22 18 22 21.59 24 23.59 22.59 25z"
                />
                <path
                  d="M28,6a2,2,0,0,0-2-2H22V2H20V4H12V2H10V4H6A2,2,0,0,0,4,6V26a2,2,0,0,0,2,2h4V26H6V6h4V8h2V6h8V8h2V6h4v6h2Z"
                />
                <title>
                  Select time range
                </title>
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div
        className="iot--card--content"
        data-testid="Card-content"
        style={
          Object {
            "--card-content-height": "576px",
          }
        }
      >
        <div
          className="iot--card--empty-message-wrapper"
          style={
            Object {
              "--card-content-padding": "16px",
            }
          }
        >
          No data is available for this time range.
        </div>
      </div>
    </div>
  </div>
  <h3>
    LARGE
  </h3>
  <div
    style={
      Object {
        "margin": 20,
        "width": "520px",
      }
    }
  >
    <div
      className="iot--card iot--card--wrapper"
      data-testid="Card"
      id="facilitycard-size-gallery-LARGE"
      role="presentation"
      style={
        Object {
          "--card-default-height": "624px",
        }
      }
    >
      <div
        className="iot--card--header"
        data-testid="Card-header"
      >
        <span
          className="iot--card--title"
          data-testid="Card-title"
          title="Card Title"
        >
          <div
            className="iot--card--title--text"
          >
            Card Title
          </div>
        </span>
        <div
          className="iot--card--toolbar"
          data-testid="Card-toolbar"
        >
          <div
            className="iot--card--toolbar-date-range-wrapper"
          >
            <div
              className="iot--card--toolbar-timerange-label"
              id="timeRange"
            >
              Default
            </div>
            <button
              aria-expanded={false}
              aria-haspopup={true}
              aria-label="open and close list of options"
              className="iot--card--toolbar-date-range-action bx--overflow-menu bx--overflow-menu--lg"
              data-testid="Card-toolbar-range-picker"
              onClick={[Function]}
              onClose={[Function]}
              onKeyDown={[Function]}
              open={false}
              title="Select time range"
              type="button"
            >
              <svg
                aria-label="Select time range"
                className="bx--overflow-menu__icon"
                fill="currentColor"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 32 32"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M21,30a8,8,0,1,1,8-8A8,8,0,0,1,21,30Zm0-14a6,6,0,1,0,6,6A6,6,0,0,0,21,16Z"
                />
                <path
                  d="M22.59 25L20 22.41 20 18 22 18 22 21.59 24 23.59 22.59 25z"
                />
                <path
                  d="M28,6a2,2,0,0,0-2-2H22V2H20V4H12V2H10V4H6A2,2,0,0,0,4,6V26a2,2,0,0,0,2,2h4V26H6V6h4V8h2V6h8V8h2V6h4v6h2Z"
                />
                <title>
                  Select time range
                </title>
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div
        className="iot--card--content"
        data-testid="Card-content"
        style={
          Object {
            "--card-content-height": "576px",
          }
        }
      >
        <div
          className="iot--card--empty-message-wrapper"
          style={
            Object {
              "--card-content-padding": "16px",
            }
          }
        >
          No data is available for this time range.
        </div>
      </div>
    </div>
  </div>
  <h3>
    LARGEWIDE
  </h3>
  <div
    style={
      Object {
        "margin": 20,
        "width": "1056px",
      }
    }
  >
    <div
      className="iot--card iot--card--wrapper"
      data-testid="Card"
      id="facilitycard-size-gallery-LARGEWIDE"
      role="presentation"
      style={
        Object {
          "--card-default-height": "624px",
        }
      }
    >
      <div
        className="iot--card--header"
        data-testid="Card-header"
      >
        <span
          className="iot--card--title"
          data-testid="Card-title"
          title="Card Title"
        >
          <div
            className="iot--card--title--text"
          >
            Card Title
          </div>
        </span>
        <div
          className="iot--card--toolbar"
          data-testid="Card-toolbar"
        >
          <div
            className="iot--card--toolbar-date-range-wrapper"
          >
            <div
              className="iot--card--toolbar-timerange-label"
              id="timeRange"
            >
              Default
            </div>
            <button
              aria-expanded={false}
              aria-haspopup={true}
              aria-label="open and close list of options"
              className="iot--card--toolbar-date-range-action bx--overflow-menu bx--overflow-menu--lg"
              data-testid="Card-toolbar-range-picker"
              onClick={[Function]}
              onClose={[Function]}
              onKeyDown={[Function]}
              open={false}
              title="Select time range"
              type="button"
            >
              <svg
                aria-label="Select time range"
                className="bx--overflow-menu__icon"
                fill="currentColor"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 32 32"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M21,30a8,8,0,1,1,8-8A8,8,0,0,1,21,30Zm0-14a6,6,0,1,0,6,6A6,6,0,0,0,21,16Z"
                />
                <path
                  d="M22.59 25L20 22.41 20 18 22 18 22 21.59 24 23.59 22.59 25z"
                />
                <path
                  d="M28,6a2,2,0,0,0-2-2H22V2H20V4H12V2H10V4H6A2,2,0,0,0,4,6V26a2,2,0,0,0,2,2h4V26H6V6h4V8h2V6h8V8h2V6h4v6h2Z"
                />
                <title>
                  Select time range
                </title>
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div
        className="iot--card--content"
        data-testid="Card-content"
        style={
          Object {
            "--card-content-height": "576px",
          }
        }
      >
        <div
          className="iot--card--empty-message-wrapper"
          style={
            Object {
              "--card-content-padding": "16px",
            }
          }
        >
          No data is available for this time range.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Card with custom range selector 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "margin": 20,
        "width": "520px",
      }
    }
  >
    <div
      className="iot--card iot--card--wrapper"
      data-testid="Card"
      id="facilitycard-with-loading"
      role="presentation"
      style={
        Object {
          "--card-default-height": "304px",
        }
      }
    >
      <div
        className="iot--card--header"
        data-testid="Card-header"
      >
        <span
          className="iot--card--title"
          data-testid="Card-title"
          title="Card Title"
        >
          <div
            className="iot--card--title--text"
          >
            Card Title
          </div>
        </span>
        <div
          className="iot--card--toolbar"
          data-testid="Card-toolbar"
        >
          <div
            className="iot--card--toolbar-date-range-wrapper"
          >
            <div
              className="iot--card--toolbar-timerange-label"
              id="timeRange"
            >
              Default
            </div>
            <button
              aria-expanded={false}
              aria-haspopup={true}
              aria-label="open and close list of options"
              className="iot--card--toolbar-date-range-action bx--overflow-menu bx--overflow-menu--lg"
              data-testid="Card-toolbar-range-picker"
              onClick={[Function]}
              onClose={[Function]}
              onKeyDown={[Function]}
              open={false}
              title="Select time range"
              type="button"
            >
              <svg
                aria-label="Select time range"
                className="bx--overflow-menu__icon"
                fill="currentColor"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 32 32"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M21,30a8,8,0,1,1,8-8A8,8,0,0,1,21,30Zm0-14a6,6,0,1,0,6,6A6,6,0,0,0,21,16Z"
                />
                <path
                  d="M22.59 25L20 22.41 20 18 22 18 22 21.59 24 23.59 22.59 25z"
                />
                <path
                  d="M28,6a2,2,0,0,0-2-2H22V2H20V4H12V2H10V4H6A2,2,0,0,0,4,6V26a2,2,0,0,0,2,2h4V26H6V6h4V8h2V6h8V8h2V6h4v6h2Z"
                />
                <title>
                  Select time range
                </title>
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div
        className="iot--card--content"
        data-testid="Card-content"
        style={
          Object {
            "--card-content-height": "256px",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Card with datetimepicker range selector 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "margin": 20,
        "width": "300px",
      }
    }
  >
    <div
      className="iot--card iot--card--wrapper"
      data-testid="Card"
      id="facilitycard-with-date-picker"
      role="presentation"
      style={
        Object {
          "--card-default-height": "304px",
        }
      }
    >
      <div
        className="iot--card--header"
        data-testid="Card-header"
      >
        <span
          className="iot--card--title"
          data-testid="Card-title"
          title="Card with date picker"
        >
          <div
            className="iot--card--title--text"
          >
            Card with date picker
          </div>
        </span>
        <div
          className="iot--card--toolbar"
          data-testid="Card-toolbar"
        >
          <div
            className="iot--date-time-pickerv2__wrapper"
            data-testid="date-time-picker"
            id="Card-toolbar-iot--date-time-pickerv2__wrapper"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            style={
              Object {
                "--wrapper-width": "3rem",
              }
            }
            tabIndex="0"
          >
            <div
              className=""
            >
              <div
                className="iot--flyout-menu iot--flyout-menu__bottom"
                data-testid="date-time-picker-datepicker-flyout-container"
                style={
                  Object {
                    "--tooltip-visibility": "hidden",
                  }
                }
              >
                <button
                  aria-describedby={null}
                  aria-label="Calendar"
                  className="iot--flyout-menu--trigger-button iot--btn bx--btn bx--btn--ghost bx--tooltip--hidden bx--btn--icon-only bx--tooltip__trigger bx--tooltip--a11y bx--btn--icon-only--top bx--tooltip--align-center"
                  data-testid="date-time-picker-datepicker-flyout-button"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  tabIndex={-1}
                  type="button"
                >
                  <div
                    className="bx--assistive-text"
                    onMouseEnter={[Function]}
                  >
                    Calendar
                  </div>
                  <svg
                    aria-hidden="true"
                    aria-label="Calendar"
                    className="bx--btn__icon"
                    fill="currentColor"
                    focusable="false"
                    height={16}
                    preserveAspectRatio="xMidYMid meet"
                    role="img"
                    viewBox="0 0 32 32"
                    width={16}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M26,4h-4V2h-2v2h-8V2h-2v2H6C4.9,4,4,4.9,4,6v20c0,1.1,0.9,2,2,2h20c1.1,0,2-0.9,2-2V6C28,4.9,27.1,4,26,4z M26,26H6V12h20	V26z M26,10H6V6h4v2h2V6h8v2h2V6h4V10z"
                    />
                  </svg>
                </button>
                <div
                  className="iot--flyout-menu--tooltip-anchor"
                >
                  <div
                    aria-expanded={false}
                    aria-label="Calendar"
                    className="bx--tooltip__label"
                    id="test-trigger-id-2"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onContextMenu={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    role="button"
                    tabIndex={0}
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="iot--card--content"
        data-testid="Card-content"
        style={
          Object {
            "--card-content-height": "256px",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Card with datetimepicker range selector with existing value 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "margin": 20,
        "width": "400px",
      }
    }
  >
    <div
      className="iot--card iot--card--wrapper"
      data-testid="Card"
      id="facilitycard-with-datepicker-existing-value"
      role="presentation"
      style={
        Object {
          "--card-default-height": "304px",
        }
      }
    >
      <div
        className="iot--card--header"
        data-testid="Card-header"
      >
        <span
          className="iot--card--title"
          data-testid="Card-title"
          title="Card Title"
        >
          <div
            className="iot--card--title--text"
          >
            Card Title
          </div>
          <div
            className="iot--card--subtitle--text"
            data-testid="Card-subtitle"
          >
            2018-10-28 13:10 to 2018-10-28 13:30
          </div>
        </span>
        <div
          className="iot--card--toolbar"
          data-testid="Card-toolbar"
        >
          <div
            className="iot--date-time-pickerv2__wrapper"
            data-testid="date-time-picker"
            id="Card-toolbar-iot--date-time-pickerv2__wrapper"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            style={
              Object {
                "--wrapper-width": "3rem",
              }
            }
            tabIndex="0"
          >
            <div
              className=""
            >
              <div
                className="iot--flyout-menu iot--flyout-menu__bottom"
                data-testid="date-time-picker-datepicker-flyout-container"
                style={
                  Object {
                    "--tooltip-visibility": "hidden",
                  }
                }
              >
                <button
                  aria-describedby={null}
                  aria-label="Calendar"
                  className="iot--flyout-menu--trigger-button iot--btn bx--btn bx--btn--ghost bx--tooltip--hidden bx--btn--icon-only bx--tooltip__trigger bx--tooltip--a11y bx--btn--icon-only--top bx--tooltip--align-center"
                  data-testid="date-time-picker-datepicker-flyout-button"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  tabIndex={-1}
                  type="button"
                >
                  <div
                    className="bx--assistive-text"
                    onMouseEnter={[Function]}
                  >
                    Calendar
                  </div>
                  <svg
                    aria-hidden="true"
                    aria-label="Calendar"
                    className="bx--btn__icon"
                    fill="currentColor"
                    focusable="false"
                    height={16}
                    preserveAspectRatio="xMidYMid meet"
                    role="img"
                    viewBox="0 0 32 32"
                    width={16}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M26,4h-4V2h-2v2h-8V2h-2v2H6C4.9,4,4,4.9,4,6v20c0,1.1,0.9,2,2,2h20c1.1,0,2-0.9,2-2V6C28,4.9,27.1,4,26,4z M26,26H6V12h20	V26z M26,10H6V6h4v2h2V6h8v2h2V6h4V10z"
                    />
                  </svg>
                </button>
                <div
                  className="iot--flyout-menu--tooltip-anchor"
                >
                  <div
                    aria-expanded={false}
                    aria-label="Calendar"
                    className="bx--tooltip__label"
                    id="test-trigger-id-2"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onContextMenu={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    role="button"
                    tabIndex={0}
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="iot--card--content"
        data-testid="Card-content"
        style={
          Object {
            "--card-content-height": "256px",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Card with ellipsed title tooltip & external tooltip 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "margin": 20,
        "width": "520px",
      }
    }
  >
    <div
      className="iot--card iot--card--wrapper"
      data-testid="Card"
      id="facilitycard-basic"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      role="presentation"
      style={
        Object {
          "--card-default-height": "304px",
        }
      }
      tabIndex={0}
    >
      <div
        className="iot--card--header"
        data-testid="Card-header"
      >
        <span
          className="iot--card--title"
          data-testid="Card-title"
          title="Card Title that should be truncated and presented in a tooltip while the cards also has an external tooltip."
        >
          <div
            className="iot--card--title--text"
          >
            Card Title that should be truncated and presented in a tooltip while the cards also has an external tooltip.
          </div>
          <div
            className="bx--tooltip__label iot--card--header--tooltip"
            id="card-tooltip-trigger-facilitycard-basic"
          >
            
            <div
              className="bx--tooltip__trigger"
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              role="button"
              tabIndex={0}
            >
              <svg
                aria-hidden={true}
                description={null}
                fill="currentColor"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                role={null}
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.5 11L8.5 6.5 6.5 6.5 6.5 7.5 7.5 7.5 7.5 11 6 11 6 12 10 12 10 11zM8 3.5c-.4 0-.8.3-.8.8S7.6 5 8 5c.4 0 .8-.3.8-.8S8.4 3.5 8 3.5z"
                />
                <path
                  d="M8,15c-3.9,0-7-3.1-7-7s3.1-7,7-7s7,3.1,7,7S11.9,15,8,15z M8,2C4.7,2,2,4.7,2,8s2.7,6,6,6s6-2.7,6-6S11.3,2,8,2z"
                />
              </svg>
            </div>
          </div>
          <div
            className="iot--card--subtitle--text iot--card--subtitle--text--padded"
            data-testid="Card-subtitle"
          >
            lorem ipsum lorem ipsum santi spiritu sanctum sentorum isabella luccesse
          </div>
        </span>
        <div
          className="iot--card--toolbar"
          data-testid="Card-toolbar"
        >
          <button
            aria-describedby={null}
            aria-pressed={null}
            className="iot--card--toolbar-action iot--card--toolbar-svg-wrapper bx--btn--icon-only iot--btn bx--btn bx--btn--sm bx--btn--ghost"
            data-testid="Card-toolbar-expand-button"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            tabIndex={0}
            title="Expand to fullscreen"
            type="button"
          >
            <svg
              aria-hidden="true"
              aria-label="Expand to fullscreen"
              className="bx--btn__icon"
              fill="currentColor"
              focusable="false"
              height={16}
              preserveAspectRatio="xMidYMid meet"
              role="img"
              viewBox="0 0 32 32"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M28,4H10A2.0059,2.0059,0,0,0,8,6V20a2.0059,2.0059,0,0,0,2,2H28a2.0059,2.0059,0,0,0,2-2V6A2.0059,2.0059,0,0,0,28,4Zm0,16H10V6H28Z"
              />
              <path
                d="M18,26H4V16H6V14H4a2.0059,2.0059,0,0,0-2,2V26a2.0059,2.0059,0,0,0,2,2H18a2.0059,2.0059,0,0,0,2-2V24H18Z"
              />
            </svg>
          </button>
          <button
            aria-describedby={null}
            aria-pressed={null}
            className="iot--card--toolbar-action iot--card--toolbar-svg-wrapper bx--btn--icon-only iot--btn bx--btn bx--btn--sm bx--btn--ghost"
            data-testid="Card-toolbar-extra-single-action"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            tabIndex={0}
            title="Action Label"
            type="button"
          >
            <svg
              aria-hidden="true"
              aria-label="Action Label"
              className="bx--btn__icon"
              fill="currentColor"
              focusable="false"
              height={16}
              preserveAspectRatio="xMidYMid meet"
              role="img"
              viewBox="0 0 32 32"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M17 15L17 8 15 8 15 15 8 15 8 17 15 17 15 24 17 24 17 17 24 17 24 15z"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        className="iot--card--content"
        data-testid="Card-content"
        style={
          Object {
            "--card-content-height": "256px",
          }
        }
      />
      <div
        className="iot--card--footer--wrapper"
        data-testid="Card-footer"
      >
        <button
          aria-describedby={null}
          aria-pressed={null}
          className="iot--btn bx--btn bx--btn--sm bx--btn--ghost"
          data-testid="Button"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          tabIndex={0}
          type="button"
        >
          Footer Content
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Card with error 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "margin": 20,
        "width": "520px",
      }
    }
  >
    <div
      className="iot--card iot--card--wrapper"
      data-testid="Card"
      id="facilitycard-error"
      role="presentation"
      style={
        Object {
          "--card-default-height": "304px",
        }
      }
    >
      <div
        className="iot--card--header"
        data-testid="Card-header"
      >
        <span
          className="iot--card--title"
          data-testid="Card-title"
          title="Card Title"
        >
          <div
            className="iot--card--title--text"
          >
            Card Title
          </div>
        </span>
      </div>
      <div
        className="iot--card--content"
        data-testid="Card-content"
        style={
          Object {
            "--card-content-height": "256px",
          }
        }
      >
        <div
          className="iot--card--empty-message-wrapper"
          style={
            Object {
              "--card-content-padding": "16px",
            }
          }
        >
          Error loading data for this card:  API threw Nullpointer
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Card with render prop 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "margin": 20,
        "width": "520px",
      }
    }
  >
    <div
      className="iot--card iot--card--wrapper"
      data-testid="Card"
      id="facilitycard-basic"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      role="presentation"
      style={
        Object {
          "--card-default-height": "304px",
        }
      }
      tabIndex={0}
    >
      <div
        className="iot--card--header"
        data-testid="Card-header"
      >
        <span
          className="iot--card--title"
          data-testid="Card-title"
          title="Card with render prop"
        >
          <div
            className="iot--card--title--text"
          >
            Card with render prop
          </div>
        </span>
        <div
          className="iot--card--toolbar"
          data-testid="Card-toolbar"
        >
          <div
            className="iot--card--toolbar-date-range-wrapper"
          >
            <div
              className="iot--card--toolbar-timerange-label"
              id="timeRange"
            >
              Default
            </div>
            <button
              aria-expanded={false}
              aria-haspopup={true}
              aria-label="open and close list of options"
              className="iot--card--toolbar-date-range-action bx--overflow-menu bx--overflow-menu--lg"
              data-testid="Card-toolbar-range-picker"
              onClick={[Function]}
              onClose={[Function]}
              onKeyDown={[Function]}
              open={false}
              title="Select time range"
              type="button"
            >
              <svg
                aria-label="Select time range"
                className="bx--overflow-menu__icon"
                fill="currentColor"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 32 32"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M21,30a8,8,0,1,1,8-8A8,8,0,0,1,21,30Zm0-14a6,6,0,1,0,6,6A6,6,0,0,0,21,16Z"
                />
                <path
                  d="M22.59 25L20 22.41 20 18 22 18 22 21.59 24 23.59 22.59 25z"
                />
                <path
                  d="M28,6a2,2,0,0,0-2-2H22V2H20V4H12V2H10V4H6A2,2,0,0,0,4,6V26a2,2,0,0,0,2,2h4V26H6V6h4V8h2V6h8V8h2V6h4v6h2Z"
                />
                <title>
                  Select time range
                </title>
              </svg>
            </button>
          </div>
          <button
            aria-describedby={null}
            aria-pressed={null}
            className="iot--card--toolbar-action iot--card--toolbar-svg-wrapper bx--btn--icon-only iot--btn bx--btn bx--btn--sm bx--btn--ghost"
            data-testid="Card-toolbar-expand-button"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            tabIndex={0}
            title="Expand to fullscreen"
            type="button"
          >
            <svg
              aria-hidden="true"
              aria-label="Expand to fullscreen"
              className="bx--btn__icon"
              fill="currentColor"
              focusable="false"
              height={16}
              preserveAspectRatio="xMidYMid meet"
              role="img"
              viewBox="0 0 32 32"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M28,4H10A2.0059,2.0059,0,0,0,8,6V20a2.0059,2.0059,0,0,0,2,2H28a2.0059,2.0059,0,0,0,2-2V6A2.0059,2.0059,0,0,0,28,4Zm0,16H10V6H28Z"
              />
              <path
                d="M18,26H4V16H6V14H4a2.0059,2.0059,0,0,0-2,2V26a2.0059,2.0059,0,0,0,2,2H18a2.0059,2.0059,0,0,0,2-2V24H18Z"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        className="iot--card--content"
        data-testid="Card-content"
        style={
          Object {
            "--card-content-height": "256px",
          }
        }
      >
        <p>
          Content width is 
           and height is 
          NaN
        </p>
      </div>
      <div
        className="iot--card--footer--wrapper"
        data-testid="Card-footer"
      >
        <button
          aria-describedby={null}
          aria-pressed={null}
          className="iot--btn bx--btn bx--btn--sm bx--btn--ghost"
          data-testid="Button"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          tabIndex={0}
          type="button"
        >
          Footer Content
        </button>
      </div>
    </div>
  </div>
</div>
`;
